--- a/assets/style.css
+++ b/assets/style.css
@@ -137,7 +137,7 @@ li:hover {
 }
 
 
-.filter-btns{
+.filters{
 	border-radius: 50px;
 	background-color: white;
 	color: #1D6154;
@@ -151,10 +151,6 @@ li:hover {
 	margin-bottom: 20px;
 }
 
-.filter-btns:hover {
-	background-color: #1D6154;
-	color: white;
-}
 
 .gallery {
 	width: 100%;
@@ -171,6 +167,7 @@ li:hover {
 #contact {
 	width: 50%;
 margin: auto;
+margin-top: 25px;
 }
 #contact > * {
 	text-align: center;
@@ -204,12 +201,19 @@ input[type="submit"]{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
-	background-color: #1D6154;
+	background-color: grey;
 	margin : 2em auto ;
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+	position: absolute;
+	top: 750px;
+	right: 260px;
+	height: 40px;
+	font-size: large;
+	border-color: grey ;
 }
+
 
 footer nav ul {
 	display: flex;
@@ -227,16 +231,22 @@ footer nav ul {
 /*Boutton modifier*/
 .edit {
 	position: absolute;
-	bottom: 50px;
+	bottom: 1290px;
   right: 300px;
 }
 
 .modifier {
 	position: absolute;
-	bottom: 0px;
-	left: 20px;
+	bottom: 20px;
+	right: 1380px;
 }
 
+
+.logo-pen {
+	position: absolute;
+	right: 1450px ;
+	bottom: 20px;
+}
 
 /*Boutton édition*/
 
@@ -256,7 +266,12 @@ footer nav ul {
 /*modale*/
 
 
-
+.image-grid {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr); /* 5 images par ligne */
+	gap: 10px; /* Espacement entre les images */
+	overflow-y: auto; /* Défilement vertical si nécessaire */
+}
 
 .modal {
     display: none; /* Par défaut, la modale est masquée */
@@ -269,15 +284,60 @@ footer nav ul {
     background-color: rgba(0,0,0,0.4); /* Fond semi-transparent */
 }
 
+
+
+.case-image {
+	background-color: rgb(240, 247, 244);
+	position: absolute;
+	top: 100px;
+	left: 95px;
+	display: flex;
+    flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	gap: 5px;
+	width: 60%;
+	padding: 45px;
+
+}
+
+.content-addworks {
+	display: none;
+	text-align: center;
+	margin-bottom: 10px;
+	background-color: #e8f1f6;
+	margin-bottom: 10px;
+width: 70%;
+position: absolute;
+top: 120px;
+right: 120px;
+}
+
+
 /* Style du contenu de la modale */
 .modal-content {
-    background-color: #fefefe; /* Fond blanc */
-    margin: 15% auto; /* Centrez la modale verticalement et horizontalement */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 27%; /* Largeur de la modale */
-		height: 600px;
+	justify-items: center;
+	justify-content: center;
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 17%; /* Ajustez la largeur selon vos besoins */
+	height: 800px; /* Ajustez la hauteur selon vos besoins */
+	overflow-y: auto; /* Ajoute une barre de défilement vertical si nécessaire */
+	display: grid;
+	align-content: center;
+	grid-template-columns: repeat(5, 1fr); /* Divise la modale en 5 colonnes égales */
+	gap: 0px; /* Ajoute un espace entre les images */
+	align-items: center;
+	z-index: 1000; /* Z-index de la modale */
 }
+
+/* CSS pour les images */
+
+
+
 #modal-image-container {
 	margin-top: 50px;
   text-align: center; /* Centrer horizontalement le contenu */
@@ -298,25 +358,38 @@ footer nav ul {
 
 
 .modal-page {
+	position: relative;
 	background-color: #fefefe; /* Fond blanc */
 	margin: 15% auto; /* Centrez la modale verticalement et horizontalement */
 	padding: 20px;
 	border: 1px solid #888;
-	width: 15%; /* Largeur de la modale */
-	height: 600px;
+	width: 18%; /* Largeur de la modale */
+	height: 800px;
+	z-index: 1000; /* Z-index de la modale */
+	
 }
 
 .modal-page.active {
   display: block; /* Afficher la page modale lorsque la classe active est présente */
 }
 
+.texte-ajout {
+	position:relative;
+	top:20px;
+	left: 210px;
+	color: black;
+	font-weight: bold;
+	font-size: 28px;
+	z-index: 1001;
+}
 
 /* Style du bouton de fermeture */
 .close {
 
-	position: absolute;
-	top: 500px;
-	right: 1310px;
+
+position: absolute;
+top: 15px;
+right: 30px;
     color: black; 
     
     font-size: 28px;
@@ -354,22 +427,41 @@ footer nav ul {
 	height: 50px;
 	background-color: #1D6154;
 	color: white;
-	border-radius: 30%;
+	border-radius: 25px;
+	position: absolute;
+	bottom: 20px;
+	left: 240px;
+	font-size: large;
+}
+.boutton-ajouter-photo {
+	 background-color: #888;
+	 padding: 10px;
+	 border-radius: 50px;
+}
+
+.modal-image {
+  width: 85px; /* Ajustez la taille des images selon vos besoins */
+  height: auto; /* Ajustez la taille des images selon vos besoins */
+	margin-top: 30px;
+ 
 }
 
 
-.modal-image {
-  width: 100px; /* Ajustez la taille des images selon vos besoins */
-  height: auto; /* Ajustez la taille des images selon vos besoins */
-  margin: 10px; /* Espacement entre les images */
+
+.figure {
+	position: relative;
+
 }
 
 /* Styles pour les icônes de poubelle */
 .delete-icon {
- 
-
+ position: absolute;
+ top: 40px;
+ right: 10px;
+background-color: black;
   cursor: pointer;
-  color: black; /* Couleur de l'icône de poubelle */
+	padding: 5px;
+  color: white; /* Couleur de l'icône de poubelle */
 }
 
 
@@ -423,14 +515,78 @@ position: relative;
   align-items: center;
 }
 
-.boutton_fichier {
-	opacity: 0;
+.texte-titre {
+	position: absolute;
+left: 90px;
+	top:380px;
 }
+
+.texte-categorie {
+	position: absolute;
+	top: 500px;
+	left: 90px;
+}
+
+
+.bordure-grise {
+	border: 1px solid #b3b3b3; /* Épaisseur et couleur de la bordure */
+	width: 70%; /* Largeur de la bordure, par rapport à la largeur de la page */
+	margin: 0 auto; /* Centrer la bordure horizontalement */
+	position: absolute;
+	top:720px;
+	right: 80px;
+}
+
+
+.bordure-grise-deux {
+	border: 1px solid #b3b3b3; /* Épaisseur et couleur de la bordure */
+	width: 70%; /* Largeur de la bordure, par rapport à la largeur de la page */
+	margin: 0 auto; /* Centrer la bordure horizontalement */
+	position: absolute;
+	top:650px;
+	right: 80px;
+}
+
+.boutton-texte {
+	right: 50px;
+	position: absolute;
+	top: 420px;
+	width: 80%;
+	height: 45px;
+border: 1px solid #ffffff;
+box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+}
+
+ .bouton-fichier {
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.boutton-categorie {
+	right: 50px;
+	position: absolute;
+	top:550px;
+	width: 80%;
+	height: 45px;
+	border: 1px solid #ffffff;
+box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+}
+
 
 .position_valider {
 	position: absolute;
 	top: 300px;
 	right: 160px;
+}
+
+
+
+.messageForm{
+	position: relative;
 }
 
 /* CSS pour aligner les images par groupe de cinq */
@@ -444,10 +600,66 @@ position: relative;
 
 .modal-content {
   text-align: justify; /* Aligner les conteneurs d'images pour qu'ils soient justifiés */
+	position: relative;
 }
 
 .modal-content::after {
   content: '';
   display: inline-block;
   width: 100%; /* Créer un espace invisible pour forcer le dernier groupe d'images à s'aligner correctement */
+}
+
+/* CSS */
+.preview-image {
+width: 30%; /* La largeur maximale est celle du conteneur parent */
+
+
+}
+
+.edit-mode-banner {
+	background-color: #000;
+
+	height: 30px;
+	color: #fff;
+	display: flex;
+	flex-direction: row-reverse;
+	padding-top: 10px;
+	justify-content: center;
+	display: none;
+}
+
+.edit-mode-banner p {
+	display: flex;
+	margin-left: 10px;
+	justify-content: center;
+}
+
+.mot-edition {
+	position: absolute;
+	left: 1800px;
+	top:10px;
+}
+
+.texte-gallerie {
+	position: absolute;
+	font-size: 28px;
+	font-weight: bold;
+	top: 50px;
+}
+
+.logo-fleche {
+	font-size: x-large;
+	position: absolute;
+	top: 15px;
+}
+
+/* Style du bouton en gris par défaut */
+.boutton-valider {
+  background-color: #ccc; /* Gris */
+  color: #fff;
+}
+
+/* Style du bouton en vert lorsqu'il est validé */
+.boutton-valider.valid {
+  background-color: #2ecc71; /* Vert */
 }
